--- a/assets/src/app/search/index.tpl.html
+++ b/assets/src/app/search/index.tpl.html
@@ -1,35 +1,33 @@
 <div ui-view="search">
-	<div style="margin-left:10%;margin-right:10%;margin-top:5%">
+	<div class="container">
 		<div ng-show="!searchQuery">
-			<h1>discover content</h1>
-			<p>trending</p>
-			<h4>committees</h4>
-			<h4>members</h4>
-			<h4>bills</h4>
-			<h4>votes</h4>
-			
-		</div>
-		<div ng-show="searchQuery">
-			<div>
-				<h1>{{searchQuery}}</h1><hr style="width:100%">
-			</div>
-
-			<!--<input ng-keyup="keyPress(searchValue)" ng-model="searchValue">
+			<h1>discover members / legislators</h1>
+			<input ng-keyup="keyPress(searchValue)" ng-model="searchValue">
 			<div ng-repeat="searchResult in searchResults">
 				<a href="/project/{{searchResult.urlTitle}}">{{searchResult.title}}</a>
 			</div>
-			<div style="height:100px"></div>-->
+			<div style="height:20px"></div>
+			<!--search with member filter-->
+			<p>trending</p>
+			<h4>bills</h4>
+			<h4>committees</h4>
+			<h4>votes</h4>
+		
+		</div>
+		<div ng-show="searchQuery">
+			<div><h1>{{searchQuery}}</h1><md-divider></md-divider></div>
 
-
-			<div ng-repeat="searchResult in searchResults">
-				<h4 ng-show="searchResult.username"><a href="/member/{{searchResult.username}}">{{searchResult.username}}</a></h4>
-				<h4 ng-show="searchResult.billContent"><a href="/bill/{{searchResult.id}}/{{searchResult.title}}">{{searchResult.title}}</a></h4>
-				<h4 ng-show="!searchResult.billContent"><a href="/committee/{{searchResult.urlTitle}}">{{searchResult.title}}</a></h4>
-			</div>
+			<md-card ng-repeat="searchResult in searchResults">
+				<!--<img ng-show="searchResult.username" src="{{searchResult.avatarUrl}}" class="md-card-image" alt="{{searchResult.username}}" style="">-->
+				<md-card-title>
+					<md-card-title-text>
+						<h4 ng-show="searchResult.username"><a href="/member/{{searchResult.username}}">{{searchResult.username}}</a></h4>
+						<h4 ng-show="searchResult.billContent"><a href="/bill/{{searchResult.id}}/{{searchResult.title}}">{{searchResult.title}}</a></h4>
+						<h4 ng-show="!searchResult.billContent"><a href="/committee/{{searchResult.urlTitle}}">{{searchResult.title}}</a></h4>
+					</md-card-title-text>
+				</md-card-title>
+			</md-card>
 			<br>
-			<!--<div ng-repeat="searchResult in searchResults">
-				<h4><a href="/member/{{searchResult.username}}">{{searchResult.username}}</a></h4>
-			</div>-->
 		</div>
 	</div>
 </div>
