--- a/assets/src/app/account/index.tpl.html
+++ b/assets/src/app/account/index.tpl.html
@@ -96,7 +96,7 @@
 
 	<br><br>
 	<a href="{{user.socialAccounts.google.profileUrl}}">
-		<img src="{{user.socialAccounts.google.profilePic}}">
+		<img style="height:64px;" src="{{user.socialAccounts.google.profilePic}}">
 		<span>{{user.socialAccounts.google.displayName}}</span>
 	</a>
 	<a ng-show="!googlePassport"class="btn btn-primary" href="/auth/google">connect google</a>
