--- a/assets/src/app/nav/index.tpl.html
+++ b/assets/src/app/nav/index.tpl.html
@@ -3,7 +3,7 @@
 </style>
 
 <div ng-controller="NavCtrl" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container center">
+  <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
@@ -22,6 +22,8 @@
             <input ng-keyup="keyPress(searchValue)" ng-model="searchValue" id="search-link" size="40" type="text" placeholder="">
           </div>
         </form>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
         <li ng-show="currentUser"><a href="/account">{{currentUser.username}}</a></li>
         <li ng-show="currentUser"><a href="/logout">signout</a></li>
         <li ng-show="!currentUser"><a href="/register">register</a></li>
