--- a/assets/src/app/bills/index.tpl.html
+++ b/assets/src/app/bills/index.tpl.html
@@ -1,7 +1,9 @@
 <md-content>
-	<md-list>
-		<md-subheader class="md-no-sticky">bills</md-subheader>
-		<md-divider></md-divider>
+	<div class="container">
+		<h2 class="md-no-sticky">bills</h2>
+	</div>
+	<md-divider></md-divider>
+	<md-list class="container">
 		<md-list-item ng-repeat="bill in bills">
 			<div class="md-list-item-text" layout="column">
 				<h4 class="committees title">
