--- a/assets/src/app/vote/index.tpl.html
+++ b/assets/src/app/vote/index.tpl.html
@@ -1,9 +1,6 @@
-<style>
-	.voteContainer{padding:50px;}
-</style>
 <div ui-view="vote">
 
-	<div class="voteContainer">
+	<div class="voteContainer container">
 		<h3>{{vote.voteCount}} - {{vote.title}}</h3>
 		<h3>{{vote.plusCount}} - {{vote.minusCount}}</h3>
 		<!--<h3>{{vote.otherCount}}</h3>-->
