--- a/assets/src/app/votes/index.tpl.html
+++ b/assets/src/app/votes/index.tpl.html
@@ -1,7 +1,9 @@
 <md-content>
-	<md-list>
-		<md-subheader class="md-no-sticky">votes</md-subheader>
-		<md-divider></md-divider>
+	<div class="container">
+		<h2 class="md-no-sticky">votes</h2>
+	</div>
+	<md-divider></md-divider>
+	<md-list class="container">
 		<md-list-item ng-repeat="vote in votes">
 			<div class="md-list-item-text" layout="column">
 				<h3 class="committees title" style="font-size:25px">
