--- a/assets/src/app/bill/index.tpl.html
+++ b/assets/src/app/bill/index.tpl.html
@@ -19,7 +19,7 @@
 			<br>
 			<p class="lead">{{bill.billContent.current_status_description}}</p>
 			<p class="lead">{{bill.billContent.current_status_label}}</p>
-			<p class="lead">{{bill.billContent.display_number}}</p>
+			<!--<p class="lead">{{bill.billContent.display_number}}</p>-->
 			<!--<p class="lead">{{bill.billContent.introduced_date}}</p>-->
 			<!--<p class="lead">{{bill.billContent.is_alive}}</p>-->
 			<!--<p class="lead"><a href="{{bill.fullLink}}">Full Text Link</a></p>-->
