--- a/assets/src/app/login/index.tpl.html
+++ b/assets/src/app/login/index.tpl.html
@@ -53,16 +53,16 @@
         <form role="form" action="/auth/local" method="post">
             <input name="identifier" placeholder="email or username" title="username" type="text"> 
             <input name="password" placeholder="password" title="username" type="password"> 
-            <button style="width:100%" class="btn" type="submit">Sign in</button> 
+            <button style="width:100%" class="btn btn-green" type="submit">Sign in</button> 
         </form>
         <div style="text-align:center">
             <a class="" href="/register">Sign up for Voetr</a>
         </div>
         <br><md-divider></md-divider>
         <div style="text-align:center;padding:2em">
-            <a style="width:100%;margin:3px" class="btn" href="/auth/facebook">Facebook</a>
-            <a style="width:100%;margin:3px" class="btn" href="/auth/twitter">Twitter</a>
-            <a style="width:100%;margin:3px" class="btn" href="/auth/google">Google</a>
+            <a style="width:100%;margin:3px" class="btn btn-block btn-social btn-facebook" href="/auth/facebook"><span class="fa fa-facebook"></span> Facebook</a>
+            <a style="width:100%;margin:3px" class="btn btn-block btn-social btn-twitter" href="/auth/twitter"><span class="fa fa-twitter"></span> Twitter</a>
+            <a style="width:100%;margin:3px" class="btn btn-block btn-social btn-google" href="/auth/google"><span class="fa fa-google"></span> Google</a>
         </div> 
     </div>
 </div>
