--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -38,6 +38,15 @@
       </div>
 
 
+      <div class="profileMessage">
+        <md-input-container class="md-block">
+              <textarea ng-model="newMessage" md-maxlength="150" rows="5" md-select-on-focus></textarea>
+        </md-input-container>
+      </div>
+
+      <div ng-repeat="message in messages">
+      </div>
+
       <h3>recommended votes</h3>
       <md-divider></md-divider>
       <md-card ng-repeat="vote in votes">
