--- a/assets/src/app/committee/home.tpl.html
+++ b/assets/src/app/committee/home.tpl.html
@@ -1,18 +1,15 @@
-<div id="sidebar-wrapper">
+<!--<div id="sidebar-wrapper">
   <ul class="sidebar-nav">
     <br>
     <li><a style="font-weight:bold" href="committee/{{committee.urlTitle}}">{{committee.title}}</a></li>
     <hr>
-    <!--<li><a href="committee/{{committee.urlTitle}}">bylaws</a></li>-->
-    <!--<li><a href="committee/{{committee.urlTitle}}/committees">committees</a></li>-->
     <li><a href="committee/{{committee.urlTitle}}/bills">bills</a></li>
     <li><a href="committee/{{committee.urlTitle}}/discussion">discussion</a></li>
-    <!--<li><a href="committee/{{committee.urlTitle}}">polls</a></li>-->
     <li><a href="committee/{{committee.urlTitle}}/members">members</a></li>
     <li><a href="committee/{{committee.urlTitle}}/votes">votes</a></li>
   </ul>
-</div>
-<div id="main-container">
+</div>-->
+<div class="container">
   <div class="committee-title">
     <h1>{{committee.title}}</h1>
   </div>
@@ -21,15 +18,12 @@
     <br>
     <button ng-click="toggleEditCommittee()" class="btn btn-primary">edit committee</button>
     <br>
-
     <div style="margin-left:20%;margin-right:20%;" ng-show="editCommitteeToggle">
       edit committee form
     </div>
-
     <br>
     <button ng-click="toggleCreateBill()" class="btn btn-primary">+ bill</button>
     <br>
-
     <div style="margin-left:20%;margin-right:20%;" ng-show="createBillToggle">
       <form class="committee-input" role="form" ng-submit="createBill(newBill)">
         <div class="form-group">
@@ -39,26 +33,57 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
-    
   </div>
-  <div class="bill-list-container">
-    <div class="bill-container" ng-repeat="bill in bills | orderBy:'-voteCount'">
-      <div class="bill-item">
-        <div>
-          <h4>
-            {{bill.voteCount}}
-            <button class="btn btn-default" ng-click="createVote(1, bill)"><i class="fa fa-caret-up"></i></button>
-            <button class="btn btn-default" ng-click="createVote(-1, bill)"><i class="fa fa-caret-down"></i></button>
-            <a href="/bill/{{bill.id}}/{{bill.title}}">{{bill.title}}</a>
-          </h4>
+  <br>
+  <uib-tabset>
+    <uib-tab heading="Activity" active="active">
+      <div class="bill-list-container">
+        <div class="bill-container" ng-repeat="bill in bills | orderBy:'-voteCount'">
+          <div class="bill-item">
+            <div>
+              <h4>
+                {{bill.voteCount}}
+                <button class="btn btn-default" ng-click="createVote(1, bill)"><i class="fa fa-caret-up"></i></button>
+                <button class="btn btn-default" ng-click="createVote(-1, bill)"><i class="fa fa-caret-down"></i></button>
+                <a href="/bill/{{bill.id}}/{{bill.title}}">{{bill.title}}</a>
+              </h4>
+            </div>
+            <div>
+              <a href="/bill/{{bill.id}}/{{bill.title}}">{{bill.comments.length}} comments, {{bill.votes.length}} votes</a>
+            </div>
+            <br>
+          </div>
+          <md-divider ></md-divider>
         </div>
-        <div>
-          <a href="/bill/{{bill.id}}/{{bill.title}}">{{bill.comments.length}} comments, {{bill.votes.length}} votes</a>
-        </div>
-        <br>
       </div>
-      <md-divider ></md-divider>
-    </div>
-  </div>
+    </uib-tab>
+    <uib-tab heading="Bills">
+      <div class="bill-list-container">
+        <div class="bill-container" ng-repeat="bill in bills | orderBy:'-voteCount'">
+          <div class="bill-item">
+            <div>
+              <h4>
+                {{bill.voteCount}}
+                <button class="btn btn-default" ng-click="createVote(1, bill)"><i class="fa fa-caret-up"></i></button>
+                <button class="btn btn-default" ng-click="createVote(-1, bill)"><i class="fa fa-caret-down"></i></button>
+                <a href="/bill/{{bill.id}}/{{bill.title}}">{{bill.title}}</a>
+              </h4>
+            </div>
+            <div>
+              <a href="/bill/{{bill.id}}/{{bill.title}}">{{bill.comments.length}} comments, {{bill.votes.length}} votes</a>
+            </div>
+            <br>
+          </div>
+          <md-divider ></md-divider>
+        </div>
+      </div>
+    </uib-tab>
+    <uib-tab heading="Discussion">
+    </uib-tab>
+    <uib-tab heading="Members">
+    </uib-tab>
+    <uib-tab heading="Votes">
+    </uib-tab>
+  </uib-tabset>
 </div>
 <div ng-include="'footer/index.tpl.html'"></div>
