--- a/assets/src/app/committees/index.tpl.html
+++ b/assets/src/app/committees/index.tpl.html
@@ -1,8 +1,8 @@
 <!--if logged in-->
 <md-subheader class="md-no-sticky">committees</md-subheader>
 <md-divider ></md-divider>
-<md-subheader class="md-no-sticky">filter</md-subheader>
-<md-divider ></md-divider>
+<!--<md-subheader class="md-no-sticky">filter</md-subheader>
+<md-divider ></md-divider>-->
 <div>
   <!--<style type="text/css">
       .angular-google-map-container { height: 250px; box-shadow: 0 0 10px rgba(0,0,0,0.5); }
@@ -14,24 +14,26 @@
       </div>
   </div>
 </div>-->
-<div ng-show="currentUser">
-  <div style="margin-left:2%;margin-right:2%;">
-    <form class="committee-input" role="form" ng-submit="createCommittee(newCommittee)">
-      <div class="form-group">
-        <input type="text" placeholder= "committee title" ng-model="newCommittee.title" class="form-control" id="postTitle">
-        <input type="text" placeholder= "committee url" ng-model="newCommittee.urlTitle" class="form-control" id="postTitle">
-        <input type="text" placeholder= "committee parent" ng-model="newCommittee.parent" class="form-control" id="postTitle">
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+<div class="container">
+  <div ng-show="currentUser">
+    <div style="margin-left:2%;margin-right:2%;">
+      <form class="committee-input" role="form" ng-submit="createCommittee(newCommittee)">
+        <div class="form-group">
+          <input type="text" placeholder= "committee title" ng-model="newCommittee.title" class="form-control" id="postTitle">
+          <input type="text" placeholder= "committee url" ng-model="newCommittee.urlTitle" class="form-control" id="postTitle">
+          <input type="text" placeholder= "committee parent" ng-model="newCommittee.parent" class="form-control" id="postTitle">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
   </div>
-</div>
-<!--/if logged in-->
-<div class="committee-list-parent-container" id="committeeScrolling">
-  <div class="committee-list-container">
-      <div class="committee-container" ng-repeat="committee in committees">
-        <h4 class="committees title"><a href="/committee/{{committee.urlTitle}}">{{committee.title}}</a></h4>
-        <p>x members</p>
+  <!--/if logged in-->
+  <div class="committee-list-parent-container" id="committeeScrolling">
+    <div class="committee-list-container">
+        <div class="committee-container" ng-repeat="committee in committees">
+          <h4 class="committees title"><a href="/committee/{{committee.urlTitle}}">{{committee.title}}</a></h4>
+          <p>x members</p>
+        </div>
       </div>
     </div>
   </div>
