--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -34,18 +34,29 @@
             </md-card-title>
           </md-card>
         </div>
-
       </div>
 
-
-      <div class="profileMessage">
-        <md-input-container class="md-block">
-              <textarea ng-model="newMessage" md-maxlength="150" rows="5" md-select-on-focus></textarea>
-        </md-input-container>
+      <div class="profilePost">
+        <form role="form">
+          <md-input-container class="md-block">
+            <textarea ng-model="newPost.post" md-maxlength="150" rows="5" md-select-on-focus aria-label="new post"></textarea>
+          </md-input-container>
+          <!--connect legislators-->
+        </form>
+        <button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
       </div>
 
-      <div ng-repeat="message in messages">
-      </div>
+      <md-card ng-repeat="post in posts">
+        <md-card-title>
+          <md-card-title-text>
+            <a href="member/{{post.user.username}}">
+              <img style="max-width:64px" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
+              {{post.user.username}}
+            </a>
+            <p>{{post.post}}</p>
+          </md-card-title-text>
+        </md-card-title>
+      </md-card>
 
       <h3>recommended votes</h3>
       <md-divider></md-divider>
@@ -136,9 +147,9 @@
         <!--<p>local counties / search</p>-->
 
         <p>directly impact the creation of policy</p>
-        <p>with direct input on policy your voice counts</p>
-        <p>tell your reps how you feel about any piece of legislation</p>
-        <p>continual open ballot elections - represent others at anytime</p>
+        <p>with direct input on policy your voice matters</p>
+        <p>tell your reps how you feel about specifc legislation</p>
+        <p>with open ballot elections - represent others at anytime</p>
 
         <md-divider></md-divider>
         <br><br>
