--- a/assets/src/app/account/index.tpl.html
+++ b/assets/src/app/account/index.tpl.html
@@ -70,7 +70,7 @@
 		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{identificationPercentage}}%;"></div>
 	</div>
 	<br>
-	<md-input-container>
+	<md-input-container class="md-block">
 		<label class="modal-label">Address</label>
 		<input ng-model="user.address" required name="address" type="text">
 	</md-input-container>
