--- a/assets/src/app/bill/index.tpl.html
+++ b/assets/src/app/bill/index.tpl.html
@@ -1,75 +1,72 @@
-<style>
-
-	.billContent{
-		padding:20px;
-		border:1px solid grey;
-	}
-
-</style>
-
 <div ui-view="bill">
 	<div class="billContainer container">
 		<h3>{{bill.title}}</h3>
 		<md-subheader ng-bind="bill.createdAt | date:'MM/dd/yyyy h:mma'" class="md-no-sticky"></md-subheader><br>
-
-		<!--<p><a href="">{{bill.committee}}</a></p>-->
+		<!--<p><a href="{{bill.committee.urlTitle}}">{{bill.committee.title}}</a></p>-->
 		<md-divider></md-divider>
-		
-		<div id="billContent">
-			<br>
-			<p class="lead">{{bill.billContent.current_status_description}}</p>
-			<p class="lead">{{bill.billContent.current_status_label}}</p>
-			<!--<p class="lead">{{bill.billContent.display_number}}</p>-->
-			<!--<p class="lead">{{bill.billContent.introduced_date}}</p>-->
-			<!--<p class="lead">{{bill.billContent.is_alive}}</p>-->
-			<!--<p class="lead"><a href="{{bill.fullLink}}">Full Text Link</a></p>-->
-			<div ng-bind-html="billContent"></div>
-			<!--<p class="lead">{{bill.billContent.major_actions}}</p>-->
-			<!--<p class="lead">{{bill.billContent.sponsor}}</p>-->
-			<!--<p class="lead">{{bill.billContent.titles}}</p>-->
-			<md-divider></md-divider>
-		</div>
-
-		<div class="voteContainer" ng-show="votes.length!=0">
-			<h3>votes</h3>
-			<md-divider></md-divider>
-			<div ng-repeat="vote in votes">
-      			<button class="btn btn-default" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i> {{vote.plusCount}}</button>
-      			<button class="btn btn-default" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i> {{vote.minusCount}}</button>
-				<h4><a href="/vote/{{vote.id}}">{{vote.title}}</a></h4>
-				<p>{{vote.type}}</p>
-				<p>{{vote.result}}</p>
-				<p>{{vote.voteCount}}</p>
-				<p>{{vote.plusCount}} - {{vote.minusCount}} - {{vote.otherCount}}</p>
-				<md-divider></md-divider>
-			</div>
-		</div>
-
-		<div class="commentsContainer" ng-hide="comments.length==0 && !currentUser">
-			<h3>comments</h3>
-			<md-divider></md-divider>
-			<!--if logged in-->
-			<div ng-show="currentUser">
-				<form class="blog-input" role="form" ng-submit="createComment(newComment)">
-					<div class="form-group">
-						<input type="text" placeholder="comment..." ng-model="newComment.comment" class="form-control" id="postTitle">
+		<uib-tabset>
+			<uib-tab heading="Info" active="active">
+				<div class="billContent">
+					<br>
+					<p>{{bill.billContent.current_status_description}}</p>
+					<p>{{bill.billContent.current_status_label}}</p>
+					<!--<p class="lead">{{bill.billContent.display_number}}</p>-->
+					<!--<p class="lead">{{bill.billContent.introduced_date}}</p>-->
+					<!--<p class="lead">{{bill.billContent.is_alive}}</p>-->
+					<!--<p class="lead"><a href="{{bill.fullLink}}">Full Text Link</a></p>-->
+					<div ng-bind-html="billContent"></div>
+					<!--<p class="lead">{{bill.billContent.major_actions}}</p>-->
+					<!--<p class="lead">{{bill.billContent.sponsor}}</p>-->
+					<!--<p class="lead">{{bill.billContent.titles}}</p>-->
+				</div>
+		    </uib-tab>
+		    <uib-tab heading="Activity">
+		    </uib-tab>
+			<uib-tab heading="Discussion">
+				<div class="commentsContainer" ng-hide="comments.length==0 && !currentUser">
+					<h3>comments</h3>
+					<md-divider></md-divider>
+					<!--if logged in-->
+					<div ng-show="currentUser">
+						<form class="blog-input" role="form" ng-submit="createComment(newComment)">
+							<div class="form-group">
+								<input type="text" placeholder="comment..." ng-model="newComment.comment" class="form-control" id="postTitle">
+							</div>
+							<button type="submit" class="btn btn-primary">Submit</button>
+						</form>
 					</div>
-					<button type="submit" class="btn btn-primary">Submit</button>
-				</form>
-			</div>
-			<br><br>
-			<!--/if logged in-->
-			<div class="commentContainer" ng-repeat="comment in comments | orderBy:'-createdAt'">
-				<!--<a href="/comment/{{comment.id}}">link</a>-->
-				<a href="/member/{{comment.user.username}}">
-					<img style="height:64px;" src="{{comment.user.avatarUrl}}">
-					<p>{{comment.user.username}}</p>
-				</a>
-				<p>{{comment.comment}}</p>
-				<md-divider></md-divider><br>
-			</div>
-		</div>
+					<br><br>
+					<!--/if logged in-->
+					<md-card class="commentContainer" ng-repeat="comment in comments | orderBy:'-createdAt'">
+			            <md-card-title>
+			            	<md-card-title-text>
+								<a href="/member/{{comment.user.username}}">
+									<img style="max-width:64px;" src="{{comment.user.avatarUrl}}" class="md-card-image" alt="{{comment.user.username}}">
+									<p>{{comment.user.username}}</p>
+								</a>
+								<p>{{comment.comment}}</p>
+			            	</md-card-title-text>
+			            </md-card-title>
+			        </md-card>
+				</div>
+		    </uib-tab>
+		    <uib-tab heading="Votes">
+			    <div class="voteContainer" ng-show="votes.length!=0">
+					<div ng-repeat="vote in votes">
+						<h4>
+			      			<button class="btn btn-default" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i> {{vote.plusCount}}</button>
+			      			<button class="btn btn-default" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i> {{vote.minusCount}}</button>
+							<a href="/vote/{{vote.id}}">{{vote.title}}</a>
+						</h4>
+						<p>{{vote.type}}</p>
+						<p>{{vote.result}}</p>
+						<p>{{vote.voteCount}}</p>
+						<p>{{vote.plusCount}} - {{vote.minusCount}} - {{vote.otherCount}}</p>
+						<md-divider></md-divider>
+					</div>
+				</div>
+		    </uib-tab>
+		</uib-tabset>
 		<div style="height:100px;"></div>
-
 	</div>
 </div>
