--- a/assets/src/app/bills/index.tpl.html
+++ b/assets/src/app/bills/index.tpl.html
@@ -3,18 +3,32 @@
 		<h2 class="md-no-sticky">bills</h2>
 	</div>
 	<md-divider></md-divider>
-	<md-list class="container">
+	<div class="container">
+		<md-card ng-repeat="bill in bills">
+	      <md-card-title>
+	        <md-card-title-text>
+	          <h4>
+				{{bill.voteCount}}
+	            <button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{vote.plusCount}}</button>
+	            <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{vote.minusCount}}</button>
+	            <a href="/bill/{{bill.id}}/{{bill.title.replace(' ','-')}}">{{bill.title}}</a>
+	          </h4>
+	        </md-card-title-text>
+	      </md-card-title>
+	    </md-card>
+	</div>
+	<!--<md-list class="container">
 		<md-list-item ng-repeat="bill in bills">
 			<div class="md-list-item-text" layout="column">
-				<h4 class="committees title">
+				<h5 class="committees title">
 					{{bill.voteCount}}
           			<button class="btn btn-default" ng-click="createVote(1, bill)"><i class="fa fa-caret-up"></i></button>
           			<button class="btn btn-default" ng-click="createVote(-1, bill)"><i class="fa fa-caret-down"></i></button>
 					<a href="/bill/{{bill.id}}/{{bill.title}}">{{bill.title}}</a>
-				</h4>
+				</h5>
 			</div>
 		</md-list-item>
-	</md-list>
+	</md-list>-->
 	<md-divider ></md-divider>
 	<br><br>
 	<div ng-click="loadMore()" style="text-align:center">
