--- a/assets/src/app/committees/index.tpl.html
+++ b/assets/src/app/committees/index.tpl.html
@@ -1,10 +1,12 @@
 <!--if logged in-->
-<md-subheader class="md-no-sticky">committees</md-subheader>
+<div class="container">
+  <md-subheader class="md-no-sticky">committees</md-subheader>
+</div>
 <md-divider ></md-divider>
 <!--<md-subheader class="md-no-sticky">filter</md-subheader>
 <md-divider ></md-divider>-->
-<div>
-  <!--<style type="text/css">
+<!--<div>
+  <style type="text/css">
       .angular-google-map-container { height: 250px; box-shadow: 0 0 10px rgba(0,0,0,0.5); }
   </style>
   <div itemscope itemtype="Map" class="map-outter bottom-contact">
@@ -31,8 +33,10 @@
   <div class="committee-list-parent-container" id="committeeScrolling">
     <div class="committee-list-container">
         <div class="committee-container" ng-repeat="committee in committees">
-          <h4 class="committees title"><a href="/committee/{{committee.urlTitle}}">{{committee.title}}</a></h4>
-          <p>x members</p>
+          <h5 class="committees title">
+            <a href="/committee/{{committee.urlTitle}}">{{committee.title}}</a>
+          </h5>
+          <!--<p>x members</p>-->
         </div>
       </div>
     </div>
