--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -522,3 +522,72 @@ hr {
 .log-form .already:hover {
   color: #1ba0a9;
 }
+
+.loader {
+  height: 2em;
+  width: 2em;
+  color: red;
+  outline: 2px solid #111;
+  -webkit-animation: loader--spinning 1.25s infinite ease;
+          animation: loader--spinning 1.25s infinite ease;
+}
+@-webkit-keyframes loader--spinning {
+  50% {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+  100% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+}
+@keyframes loader--spinning {
+  50% {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+  100% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+}
+.loader::after {
+  content: '';
+  display: block;
+  height: inherit;
+  width: inherit;
+  outline: inherit;
+  -webkit-animation-duration: 1.25s;
+          animation-duration: 1.25s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+}
+
+.loader.loaderSquare::after {
+  -webkit-animation-name: loader--asynchronous-spinning;
+          animation-name: loader--asynchronous-spinning;
+}
+@-webkit-keyframes loader--asynchronous-spinning {
+  50% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+@keyframes loader--asynchronous-spinning {
+  50% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+}
